--- a/style.css
+++ b/style.css
@@ -106,3 +106,48 @@ button {
 button:hover {
     background-color: #0056b3;
 }
+
+
+#dark-mode-toggle {
+    border-radius: 20px;
+    padding: 10px;  
+    font-size: 1em;
+    background-color: #007bff;
+    color: #ffff;
+}
+
+body.dark #dark-mode-toggle {
+    background-color: #333;
+    color: #ffff;
+}
+
+.todo-list-gid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+    gap: 20px;
+    list-style: none;
+    padding: 0;
+}
+
+li {
+    padding: 20px;
+    background-color: #f9f9f9;
+    box-shadow: 0 4px  15px rgba(0, 0, 0, 0.1);
+    border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    position: relative;
+    transition: transform 0.2s, background-color 0.3s ease;
+    color: #333; 
+}
+
+body.dark li {
+    background-color: #2c2c2c;
+    color: #ffff;
+}
+
+li:hover {
+    transform: translateY(-5px)
+}
+
